--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,55 +1,3 @@
-/* :root{
-    --pureWhite:#FEFEFE;
-    --white:#EEF0EF;
-    --purple:#5446BF;
-    --orange:#8C5335;
-    --dark-purple:#42425C;
-    
-}
-* {
-        margin: 0;
-        padding: 0;
-      }
-      .main {
-        width: 80vw;
-        margin: auto;
-      }
-      h1 {
-        text-align: center;
-        font-size: 2rem;
-      }
-      nav {
-        padding: 10px;
-        background-color: #55a0e1;
-      }
-      .screen {
-        height: 50vh;
-        width: 100%;
-        background-color: #c6e0f0;
-      }
-      .buttons {
-        display: flex;
-        justify-content: space-around;
-        margin-top: 10px;
-      }
-      button:hover {
-        cursor: pointer;
-      }
-      button {
-        padding: 5px 10px;
-        background-color: #55a0e1;
-        font-size: 1.5rem;
-        border: 2px solid black;
-        border-radius: 2px;
-      }
-      .input {
-        margin: 20px 0;
-      }
-      .forms:hover,
-      .forms:active {
-        border: 2px solid red;
-      } */
-
 :root {
   --pureWhite: #fefefe;
   --white: #eef0ef;
@@ -75,15 +23,18 @@
   grid-row: 1 / span 2;
   padding: 20px;
   background-color: var(--purple);
-  position:sticky;
+  position: sticky;
   top: 0;
-  height:100vh;
-  & a{
+  height: 100vh;
+
+  & a {
     text-decoration: none;
-    color:inherit;
+    color: inherit;
   }
 }
-
+#checkbox{
+  display: none;
+}
 .school-name {
   color: var(--pureWhite);
   padding: 5px 2em;
@@ -281,4 +232,82 @@ li {
   justify-content: space-between;
   font-family: sans-serif;
   font-size: 0.9em;
+}
+
+@media screen and (max-width:780px) {
+  body{
+    background-color: var(--white);
+  }
+  .navbar ,.sidebar{
+    display: none
+  }
+
+  .main {
+    display: block;
+  }
+
+  .side-panel {
+    height: auto;
+    padding:1px;
+    position: relative;
+    z-index: 10;
+
+  }
+  .side-panel .section{
+    padding: 0 10px;
+  }
+  .side-panel .school-name {
+    text-align: center;
+    margin:.5em 0;
+  }
+
+  .side-panel:has(#checkbox:checked) .sidebar {
+    display: block;
+  }
+
+  .sidebar {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    background-color: var(--purple);
+
+  }
+
+  .toggle {
+    position: absolute;
+    width: 2em;
+    height: 2px;
+    background-color: var(--pureWhite);
+    top: 50%;
+    left: 20px;
+  }
+
+  .toggle::after {
+    content: "";
+    position: absolute;
+    width: 2em;
+    height: 2px;
+    background-color: var(--pureWhite);
+    top:7px;
+  }
+  .toggle::before {
+    content: "";
+    position: absolute;
+    width: 2em;
+    height: 2px;
+    background-color: var(--pureWhite);
+    bottom:7px;
+  }
+  .main-panel{
+    padding: 0 .5em;
+  }
+  .main-section{
+    display: block;
+    margin-top: 0;
+    & *{
+      margin-bottom: .5em;
+    }
+  }
+  .dashboard{text-align: center;}
+  .cards{flex-direction: row-reverse;border-radius:0;}
 }
