--- a/views/template/navbar.ejs
+++ b/views/template/navbar.ejs
@@ -2,7 +2,7 @@
         <div class="searchbar">
             <input placeholder="Search for.." id="searchbar" type="text" />
             <div class="search-icon">
-                <img style="width:100%" src="img/Search.svg" alt="">
+                <img style="width:100%" src="/img/Search.svg" alt="">
             </div>
         </div>
         <div class="account">A</div>
