--- a/views/updateStudent.ejs
+++ b/views/updateStudent.ejs
@@ -41,6 +41,7 @@
                             <option data-name="" value="dob">Date of Birth</option>
                             <option data-name="" value="father">Father's Name</option>
                             <option data-name="" value="class">Class</option>
+                            <option data-name="" value="admissionDate">Admission Date</option>
                             <option data-name="" value="roll no">Roll No.</option>
                             <option data-name="" value="category">Category</option>
                             <option data-name="" value="gender">Gender</option>
