--- a/views/template/side-panel.ejs
+++ b/views/template/side-panel.ejs
@@ -6,11 +6,11 @@
                     <div class="section first">
                         <ul>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt="">
+                                <img style="width:1em;" src="/img/dashboard.svg" alt="">
                                 <a href="/">Dashboard</a>
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/internet.svg" alt="">
+                                <img style="width:1em;" src="/img/internet.svg" alt="">
                                 Visit Site
                             </li>
                         </ul>
@@ -19,14 +19,14 @@
                         <h3>STUDENT</h3>
                         <ul>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt=""><a
+                                <img style="width:1em;" src="/img/dashboard.svg" alt=""><a
                                     href="/Admission">Admission</a>
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt=""><a
+                                <img style="width:1em;" src="/img/dashboard.svg" alt=""><a
                                     href="/Update_Student">Update</a>
                             </li>
-                            <li><img style="width:1em;" src="img/dashboard.svg" alt=""><a href="/All_Students">All
+                            <li><img style="width:1em;" src="/img/dashboard.svg" alt=""><a href="/All_Students">All
                                     Students</a></li>
                         </ul>
                     </div>
@@ -34,15 +34,15 @@
                         <h3>TEACHER</h3>
                         <ul>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt=""><a href="/Add_Teacher">New
+                                <img style="width:1em;" src="/img/dashboard.svg" alt=""><a href="/Add_Teacher">New
                                     Teacher</a>
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt=""><a
+                                <img style="width:1em;" src="/img/dashboard.svg" alt=""><a
                                     href="/Update_Teacher">Update</a>
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt=""><a href="/All_Teachers">All
+                                <img style="width:1em;" src="/img/dashboard.svg" alt=""><a href="/All_Teachers">All
                                     Teachers</a>
                             </li>
                         </ul>
@@ -51,20 +51,20 @@
                         <h3>DEPARTMENTS</h3>
                         <ul>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt=""><a
+                                <img style="width:1em;" src="/img/dashboard.svg" alt=""><a
                                     href="Accounts">Accounts</a>
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt="">New Department
+                                <img style="width:1em;" src="/img/dashboard.svg" alt="">New Department
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt="">Academic Sessions
+                                <img style="width:1em;" src="/img/dashboard.svg" alt="">Academic Sessions
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt="">Combinations
+                                <img style="width:1em;" src="/img/dashboard.svg" alt="">Combinations
                             </li>
                             <li>
-                                <img style="width:1em;" src="img/dashboard.svg" alt="">Subject Set
+                                <img style="width:1em;" src="/img/dashboard.svg" alt="">Subject Set
                             </li>
                         </ul>
                     </div>
