--- a/views/allStudents.ejs
+++ b/views/allStudents.ejs
@@ -19,6 +19,8 @@
                     <div id="Student-list" class="list-container">
 
                     </div>
+                    <button id="seemore" onclick="readData('Students')"> See more...</button>
+                    <button id="gototop" onclick="scrollBack()">Top</button>
                 </div>
     </div>
 </body>
