--- a/views/allTeachers.ejs
+++ b/views/allTeachers.ejs
@@ -18,6 +18,7 @@
                     <h3>All Teachers</h3>
                     <div id="Teachers-list" class="list-container">
                     </div>
+                    <button id="seemore" onclick="readData('Teachers')">See more...</button>
                 </div>
     </div>
 </body>
