--- a/views/template/side-panel.ejs
+++ b/views/template/side-panel.ejs
@@ -52,7 +52,7 @@
                         <ul>
                             <li>
                                 <img style="width:1em;" src="/img/dashboard.svg" alt=""><a
-                                    href="Accounts">Accounts</a>
+                                    href="/Accounts">Accounts</a>
                             </li>
                             <li>
                                 <img style="width:1em;" src="/img/dashboard.svg" alt="">New Department
