--- a/views/updateTeachers.ejs
+++ b/views/updateTeachers.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard: Update teacher details</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/updateStudent.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/updateStudent.css">
 </head>
 
 <body>
@@ -78,5 +78,5 @@
                 </div>
     </div>
 </body>
-<script src="updateStudent.js"></script>
+<script src="/updateStudent.js"></script>
 </html>
