--- a/public/css/index.css
+++ b/public/css/index.css
@@ -311,3 +311,14 @@ li {
   .dashboard{text-align: center;}
   .cards{flex-direction: row-reverse;border-radius:0;}
 }
+input, select {
+  margin-bottom: 12px;
+  border-radius: 8px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  font-size: 1em;
+}
+button {
+  padding: 12px;
+  font-size: 16px;
+}
